<?xml version="1.0" encoding="UTF-8"?>

<!-- SPDX-FileCopyrightText: Copyright 2021-2022 Maxim Altoukhov -->
<!-- SPDX-License-Identifier: MIT -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.callmeneva</groupId>
    <artifactId>bratwurst</artifactId>
    <version>3.0.0</version>
    <packaging>jar</packaging>

    <name>Bratwurst</name>
    <description>Cross-platform desktop client for the Frankfurter currency exchange rates web API</description>
    <inceptionYear>2021</inceptionYear>
    <licenses>
        <license>
            <name>MIT</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <properties>
        <!-- Dependency versions -->
        <java.version>17</java.version>
        <javafx.version>17.0.2</javafx.version>
        <apache-lang.version>3.12.0</apache-lang.version>
        <apache-hc.version>5.1.2</apache-hc.version>
        <jackson.version>2.13.1</jackson.version>
        <slf4j.version>1.7.35</slf4j.version>
        <junit.version>5.8.2</junit.version>

        <!-- Plugin versions -->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-javafx-plugin.version>0.0.8</maven-javafx-plugin.version>

        <!-- Misc. -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${apache-lang.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5-fluent</artifactId>
            <version>${apache-hc.version}</version>
        </dependency>
        <dependency> <!-- Implicitly pulls in the parser itself -->
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency> <!-- Apache's HC implicitly pulls in the API dependency -->
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency> <!-- Implicitly pulls in the API dependency -->
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg> <!-- TODO: Remove on next Java release -->
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${maven-javafx-plugin.version}</version>
                <configuration>
                    <mainClass>io.github.callmeneva.bratwurst.Main</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
